--- a/Style.css
+++ b/Style.css
@@ -91,7 +91,7 @@ video{
     width: 100%;
     z-index: -1;
     object-fit: cover;
-    height: 100vh;
+    height: 100%;
 }
 #clouds{
 display: none;
@@ -110,7 +110,7 @@ display: none;
 @media screen and (max-width:490px) {
 
     .container{
-        width: 90%;
+        width: 70%;
         max-width: 450px;
         background:linear-gradient(125deg,#02a7ff,#adc20c);
        
